Fixed edge video spacing, various CSS touchups

--- a/app/assets/stylesheets/home/faq.scss
+++ b/app/assets/stylesheets/home/faq.scss
@@ -11,10 +11,13 @@ $faq-gutter: 15px;
 
 .faq__item {
   flex: 1 0;
-  min-width: 310px;
+  min-width: 280px;
   margin-bottom: 2.5em;
   margin-left: $faq-gutter;
   margin-right: $faq-gutter;
+  @media (max-width: 480px) {
+    //padding-top: 175px;
+  }
 }
 
 .faq__question {
